--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ and open the template in the editor.
 */
 
 .filters {
-    padding-top: 20px;
+    /* padding-top: 20px;
     padding-bottom: 20px;
-    border: 3px solid #5C8BCC;
+    border: 3px solid #5C8BCC; */
 }
